--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ include 'msg-adapter-spring-jpa'
 include 'security-adapter'
 include 'msg-adapter-cassandra'
 include 'optimusprime-models'
+include 'swagger'
+
