--- a/main/src/main/resources/config/application-local.yml
+++ b/main/src/main/resources/config/application-local.yml
@@ -12,6 +12,11 @@
 
 
 spring:
+    data:
+        mongodb:
+            database: test
+            host: localhost
+            uri: mongodb://localhost
     devtools:
         restart:
             enabled: true
