--- a/build.gradle
+++ b/build.gradle
@@ -206,8 +206,8 @@ subprojects
             compile "org.springframework.boot:spring-boot-starter-security"
             compile "org.springframework.boot:spring-boot-starter-web"
             compile "org.springframework.boot:spring-boot-starter-thymeleaf"
-            
-            compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'            
+
+            compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
 
             configurations {
                 all*.exclude group: 'javassist'
@@ -216,7 +216,7 @@ subprojects
             apply from: '../gradle/release.gradle'
 
             compile 'com.google.code.gson:gson:2.8.0'
-            compile 'com.google.guava:guava:18.0'
+
 
             compile "javax.inject:javax.inject:${javax_inject_version}"
 
@@ -246,6 +246,7 @@ configure (subprojects
     -project(':pcm-models')
     -project(':msg-adapter-mongo')
     -project(':healthcheck')
+    -project(':lms-models')
 
 ){
 
@@ -312,8 +313,8 @@ configure (subprojects
         compile "mysql:mysql-connector-java"
         compile "fr.ippon.spark.metrics:metrics-spark-reporter:${metrics_spark_reporter_version}"
         compile "org.mapstruct:mapstruct-jdk8:${mapstruct_version}"
-        
-        
+
+
         testCompile "com.jayway.awaitility:awaitility:${awaility_version}"
         testCompile "com.jayway.jsonpath:json-path"
         testCompile "org.springframework.boot:spring-boot-starter-test"
@@ -576,6 +577,13 @@ project(':healthcheck')
        dependencies{
            compile 'org.apache.commons:commons-lang3:3.3.2'
        }
+    }
+
+project(':lms-models')
+    {
+        dependencies{
+
+        }
     }
 
 
