--- a/build.gradle
+++ b/build.gradle
@@ -582,7 +582,7 @@ project(':healthcheck')
 project(':lms-models')
     {
         dependencies{
-
+            compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
         }
     }
 
