msg-adapter-mongo
Summary:
Msg adapter mongo :retry logic

cleanup

Test Plan: test on qa

Differential Revision: https://ben10.ailiens.com/D4297

--- a/build.gradle
+++ b/build.gradle
@@ -467,7 +467,7 @@ project(':msg-publisher')
         dependencies
             {
                 compile project(':msg-common')
-                compile project(':msg-adapter-mongo')
+                compile project(':msg-adapter-spring-jpa')
 
                 compile 'com.rabbitmq:amqp-client:3.6.5'
                 compile 'org.apache.commons:commons-lang3:3.3.2'
