--- a/main/src/test/resources/config/application.yml
+++ b/main/src/test/resources/config/application.yml
@@ -25,6 +25,8 @@ spring:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
         show-sql: true
+        hibernate:
+            ddl-auto: update
         properties:
             hibernate.cache.use_second_level_cache: true
             hibernate.cache.use_query_cache: false
