--- a/main/src/main/resources/config/application-local.yml
+++ b/main/src/main/resources/config/application-local.yml
@@ -40,6 +40,8 @@ spring:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
         show-sql: true
+        hibernate:
+            ddl-auto: update
         properties:
             hibernate.cache.use_second_level_cache: true
             hibernate.cache.use_query_cache: false
@@ -103,7 +105,7 @@ MSG:
   env: local
   baseUrl: /api/info
   userName: guest
-  password: guest
+  password: guest1234
 
 # ===================================================================
 # JHipster specific properties
