--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,7 @@ include 'msg-receiver'
 include 'msg-common'
 include 'rabbitmq-publisher'
 include 'message-sender'
-include 'common'
+include 'filters'
 include 'graphite-reporter'
 include 'graphite-reporter-extensions'
 include 'ando-models'
