--- a/optimusprime-models/gradle.properties
+++ b/optimusprime-models/gradle.properties
@@ -1,3 +1,5 @@
-version=0.1.6
-#Multitenancy changes with cluster logic
-#Shipping charges and cod charges
+version=0.1.7
+#1.4 Multitenancy changes with cluster logic
+#1.6 Shipping charges and cod charges
+#1.7 LMS Dto to create shipment in LMS
+#1.7 LMS Dto to create shipment in LMS and cod charges consignment level
