changing l b h to double

--- a/optimusprime-models/gradle.properties
+++ b/optimusprime-models/gradle.properties
@@ -1,5 +1,6 @@
-version=0.1.7
+version=0.1.8
 #1.4 Multitenancy changes with cluster logic
 #1.6 Shipping charges and cod charges
 #1.7 LMS Dto to create shipment in LMS
 #1.7 LMS Dto to create shipment in LMS and cod charges consignment level
+#0.1.8 Changing lenght , brdth , high to Double
